RESOLVED FIXED 280260
REGRESSION(282170@main): [ iOS ] css3/filters/backdrop-filter-page-scale.html is a flaky image failure
https://bugs.webkit.org/show_bug.cgi?id=280260
Summary REGRESSION(282170@main): [ iOS ] css3/filters/backdrop-filter-page-scale.html...
Matt Woodrow
Reported 2024-09-24 01:28:36 PDT
Attachments
Matt Woodrow
Comment 1 2024-09-24 01:34:09 PDT
EWS
Comment 2 2024-09-24 20:58:17 PDT
Committed 284197@main (b7e4c4a702a5): <https://commits.webkit.org/284197@main> Reviewed commits have been landed. Closing PR #34157 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.